Mon Sep 15 14:09:50 BST 2003
----------------------------
  * libclamav/mbox.c: Fixed potential buffer overrun files with long names
  			DOS style filename suffixes

Mon Sep 15 13:23:27 BST 2003
---------------------------
  * clamav-milter: Added defaults about 0.60e to INSTALL file

Sun Sep 14 21:11:00 CEST 2003
-----------------------------
  * clamd: a fatal race condition fixed (only cvs versions were vulnerable)

Fri Sep 12 06:39:30 CEST 2003
-----------------------------
  * clamd: re-open log file on SIGHUP

Thu Sep 11 05:55:42 CEST 2003
-----------------------------
  * libclamav/Makefile.am: fix for VPATH building (patch by Eugene Crosser)
  * libclamav: mbox: + fix for empty field based on patch by Thomas Lamy (Nigel)
		     + fix potential segfault on Solaris 9 (Nigel)
  * clamav-milter: 0.60e: added -P and -q flags by Nicholas M. Kirsch (Nigel)

Sun Sep  7 21:44:18 CEST 2003
-----------------------------
  * libclamav: memory leak fixes by Thomas Lamy

Fri Sep  5 15:09:58 CEST 2003
-----------------------------
  * clamd: crash gently

Thu Sep  4 20:50:20 CEST 2003
-----------------------------
  * libclamav: mbox: fix for OE messages (Nigel)

Mon Sep  1 21:45:48 CEST 2003
-----------------------------
  * clamav.rulez.pl and clamav.linux-sxs.org removed from mirrors.txt
    (thanks to Tomasz Papszun and Benjamin Zwittnig for checking them)

Mon Sep  1 21:33:25 CEST 2003
-----------------------------
  * libclamav: fixed zziplib compilation error under OS/X (Nigel)
  * libclamav: mbox cosmetic fix

Sat Aug 30 21:25:25 CEST 2003
-----------------------------
  * libclamav: mbox code update - should be more stable (Nigel)
  * clamav.conf: RemoveStaleSocket -> FixStaleSocket

Fri Aug 29 06:00:01 CEST 2003
-----------------------------
  * clamav-milter: 0.60d: Removed superflous buffer and unneeded strerror
		   call (Nigel)
  * libclamav: enabled support for Maildir files (thanks to Tomasz Papszun